fix: update contact section styling for improved layout on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -87,6 +87,12 @@ p{
   }
 }
 @media only screen and (max-width: 800px) {
+  .contact{ 
+    margin-top: 10px;
+    gap: 1rem;
+    align-items: center;
+    flex-direction: column;
+  }
   .my-container{
     overflow: auto;
     margin-right: 2rem;
